Add ride-share frontend as part of main repo

--- a/ride-sharing-backend/.env
+++ b/ride-sharing-backend/.env
@@ -2,3 +2,4 @@ DATASOURCE_URL=jdbc:mysql://localhost:3306/ridesharingdb
 DATASOURCE_USER=root
 DATASOURCE_PASSWORD=admin@123
 FRONTEND_URL=http://localhost:3000
+HIBERNATE_DIALECT=org.hibernate.dialect.MySQL8Dialect
